# Excel_gui

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ProjectReport.md  README.md  build_with_qt.bat  generate_icon.py  generate_vs_project.bat  package_for_release.bat  package_release.bat  test_clean_env.bat
include/: ExcelProcessorCore.h
include/QtCore/: qtmochelpers.h
src/console/: keygen.cpp  main.cpp
src/core/: ExcelProcessorCore.cpp  LicenseManager.cpp  LicenseManager.h  RuleCombinationEngine.cpp  RuleEngine.cpp
src/fltk_gui/: EditRuleDialog.cpp  EditRuleDialog.h  EditTaskDialog.cpp  EditTaskDialog.h  ExclusionDialog.cpp  ExclusionDialog.h  FltkMainWindow.cpp  FltkMainWindow.h  PreviewTable.cpp  PreviewTable.h  RuleTable.cpp  RuleTable.h  TaskTable.cpp  TaskTable.h  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h  RuleEditDialog.cpp  RuleEditDialog.h  main.cpp
tests/: test_config_persistence.cpp  test_config_save_load.cpp  test_granular_exclusion.cpp  test_rule_engine.cpp
